--- a/Services.GageRR.WebApp/Pages/Index.cshtml
+++ b/Services.GageRR.WebApp/Pages/Index.cshtml
@@ -41,6 +41,21 @@
 
 
 <style>
+
+
+    /* Hide number input arrow */
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+    /* Firefox */
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+
+
     :root {
         --cell-height: 30px;
         --part-count: @(Model.Part);
