Fix GageRR api route 수정

--- a/Services.GageRR.WebApp/Pages/AverageRangeMethod.cshtml
+++ b/Services.GageRR.WebApp/Pages/AverageRangeMethod.cshtml
@@ -608,7 +608,7 @@
             }
         }
 
-        const response = await fetch("/api/GageRR/Calculate", {
+        const response = await fetch("/api/GageRR/AverageRange", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json",
