Feat 레이아웃 수정

--- a/Services.GageRR.WebApp/Pages/AnovaMethod.cshtml
+++ b/Services.GageRR.WebApp/Pages/AnovaMethod.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AverageRangeMethodModel
+@model AnovaMethodModel
 @{
     ViewData["Title"] = "Gage R&R";
 
@@ -42,7 +42,6 @@
 
 <style>
     .Page {
-        width: 100%;
         --cell-height: 30px;
         --part-count: @Model.Part;
         --trial-count: @Model.Trial;
