--- a/Services.GageRR.WebApp/Pages/Shared/_Layout.cshtml.css
+++ b/Services.GageRR.WebApp/Pages/Shared/_Layout.cshtml.css
@@ -1,48 +1,31 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿.Container {
+    display: flex;
+    flex-direction: row;
 }
 
-a {
-  color: #0077cc;
+.Navbar {
+    width: 200px;
+    padding: 20px 10px 10px 20px;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.NavTitle {
+    font-size: 2rem;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.NavItem {
+    padding: 10px;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+.Header {
+    padding: 0px 20px 0px 20px;
 }
 
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+.HeaderTitle{
+    font-size: 1.5rem;
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+.Content {
+    width: 1000px;
+    flex: 1;
+    padding: 20px;
 }
